--- a/00-app-presentation.Rmd
+++ b/00-app-presentation.Rmd
@@ -21,7 +21,7 @@ It's been built by Colin, and it serves two main purposes: help the creation of 
 
 (ref:hexmakefront) The `{hexmake}` application
 
-```{r echo=FALSE, fig.cap="(ref:hexmakefront)", out.width="100%"}
+```{r 00-app-presentation-1, echo=FALSE, fig.cap="(ref:hexmakefront)", out.width="100%"}
 knitr::include_graphics("img/hexmake.png")
 ```
 
@@ -36,7 +36,7 @@ It's been built by Colin, and it serves as an example of an app built from scrat
 
 (ref:tidytuesday) The `{tidytuesday201942}` application.
 
-```{r echo=FALSE, fig.cap="(ref:tidytuesday)", out.width="100%"}
+```{r 00-app-presentation-2, echo=FALSE, fig.cap="(ref:tidytuesday)", out.width="100%"}
 knitr::include_graphics("img/tidytuesdayapp.png")
 ```
 
@@ -52,7 +52,7 @@ You will find the details of how this app was constructed at \@ref(#usecase).
 
 (ref:minifying) The `{minifying}` application.
 
-```{r echo=FALSE, fig.cap="(ref:tidytuesday)", out.width="100%"}
+```{r 00-app-presentation-3, echo=FALSE, fig.cap="(ref:tidytuesday)", out.width="100%"}
 knitr::include_graphics("img/minifying.png")
 ```
 
