--- a/04-golem.Rmd
+++ b/04-golem.Rmd
@@ -53,7 +53,7 @@ tools::CRAN_package_db() %>%
 
 And the one we use for the book is:
 
-```{r}
+```{r 04-golem-5}
 packageVersion("golem")
 ```
 
@@ -138,7 +138,7 @@ Note also that this folder must not contain any sub-folders.
 
 #### app_config.R {-}
 
-```{r, echo = FALSE}
+```{r 04-golem-9, echo = FALSE}
 readLines("golex/R/app_config.R") %>%
   glue::as_glue()
 ```
@@ -149,7 +149,7 @@ To make this process easier, you can use the `golem::set_golem_name()`, that wil
 
 #### app_server.R {-}
 
-```{r 04-golem-9, echo = FALSE}
+```{r 04-golem-10, echo = FALSE}
 readLines("golex/R/app_server.R") %>%
   glue::as_glue()
 ```
@@ -164,7 +164,7 @@ You will also find global elements from your server-logic: top-level `reactiveVa
 
 #### app_ui.R {-}
 
-```{r 04-golem-10, echo = FALSE}
+```{r 04-golem-11, echo = FALSE}
 readLines("golex/R/app_ui.R")[1:17] %>%
   glue::as_glue()
 ```
@@ -178,7 +178,7 @@ If ever you want to use `navBarPage()`, this is where you will define this: repl
 You can also define any other template page, for example with an `htmlTemplate()`. 
 If you're tempted to do that, be aware that `fluidPage()` come with a series of CSS/JS elements, and if you plan on not using a default `{shiny}` `*Page()` function, you will need to add your own CSS. 
 
-```{r 04-golem-11, echo = FALSE}
+```{r 04-golem-12, echo = FALSE}
 readLines("golex/R/app_ui.R")[18:42] %>%
   glue::as_glue()
 ```
@@ -202,7 +202,7 @@ Note that as all these elements are inside a `tags$head()`, they are to be treat
 
 #### run_app.R {-}
 
-```{r 04-golem-12, echo = FALSE}
+```{r 04-golem-13, echo = FALSE}
 readLines("golex/R/run_app.R") %>%
   glue::as_glue()
 ```
@@ -230,7 +230,7 @@ Here are some examples of what you can pass to your shiny application using this
 
 Inside the `R/` folder is the `app_config.R` file.
 
-```{r 04-golem-13, echo = FALSE}
+```{r 04-golem-14, echo = FALSE}
 readLines("golex/R/app_config.R") %>%
   glue::as_glue()
 ```
@@ -246,7 +246,7 @@ For example, `app_sys("x.txt")` points to `inst/x.txt` file inside your package.
 
 Here is what the default config file looks like:
 
-```{r 04-golem-14, echo = FALSE, comment= ""}
+```{r 04-golem-15, echo = FALSE, comment= ""}
 glue::as_glue(
   readLines(
     "golex/inst/golem-config.yml"
@@ -264,14 +264,14 @@ Use the `app_sys()` function if you want to rely on the package path once the ap
 
 These options are globally set with: 
 
-```{r 04-golem-15, eval = FALSE}
+```{r 04-golem-16, eval = FALSE}
 # This functions sets all the default options for your project
 set_golem_options()
 ```
 
 The functions reading the options in this config file are: 
 
-```{r 04-golem-16, eval = FALSE}
+```{r 04-golem-17, eval = FALSE}
 # Get the values from the config file
 get_golem_name()
 get_golem_wd()
@@ -280,7 +280,7 @@ get_golem_version()
 
 You can set these with: 
 
-```{r 04-golem-17, eval = FALSE}
+```{r 04-golem-18, eval = FALSE}
 # Get the values in the config file
 set_golem_name("this")
 set_golem_wd(".")
@@ -291,7 +291,7 @@ If you are already familiar with the `{config}` package, you can use this file j
 
 `{golem}` comes with an `amend_golem_config()` function to add elements to it.
 
-```{r 04-golem-18, eval=FALSE}
+```{r 04-golem-19, eval=FALSE}
 # Add a key in the default configuration
 amend_golem_config(
   key = "MONGODBURL", 
@@ -307,7 +307,7 @@ amend_golem_config(
 
 In `R/app_config.R`, you will find a `get_golem_config()` function that allows you to retrieve config from this config file: 
 
-```{r 04-golem-19, eval = FALSE}
+```{r 04-golem-20, eval = FALSE}
 # Retrieve the value of `where`
 get_golem_config(
   "MONGODBURL"
@@ -320,7 +320,7 @@ get_golem_config(
 
 You can also use an environment variable (default `{config}` behavior): 
 
-```{r 04-golem-20, eval=FALSE}
+```{r 04-golem-21, eval=FALSE}
 Sys.setenv("R_CONFIG_ACTIVE" = "production")
 get_golem_config("MONGODBURL")
 ```
@@ -379,7 +379,7 @@ Using this configuration file, you can then deploy the very same app on the two 
 
 (ref:envvarconnect) Setting an Environment Variable in RStudio Connect
 
-```{r echo=FALSE, fig.cap="(ref:envvarconnect)", out.width='100%'}
+```{r 04-golem-22, echo=FALSE, fig.cap="(ref:envvarconnect)", out.width='100%'}
 knitr::include_graphics("img/R_CONFIG_ACTIVE.png")
 ```
 
