--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -53,7 +53,7 @@ They are behaving like that for a lot of reasons, but notably because they want 
 
 (ref:scanningcap) How we design a webpage versus how a user will really scan it. From [@stevekrug2014].
 
-```{r 06-ux-matters-1-bis, echo=FALSE, fig.cap="(ref:scanningcap)", out.width="100%"}
+```{r 06-ux-matters-1, echo=FALSE, fig.cap="(ref:scanningcap)", out.width="100%"}
 knitr::include_graphics("img/scanning.png")
 ```
 
@@ -61,7 +61,7 @@ For example, let's have a look at the user interface of `{hexmake}` [@R-hexmake]
 
 (ref:hexmakecap) Snapshot of the `{hexmake}` `{shiny}` application on <https://connect.thinkr.fr/hexmake/>.
 
-```{r 06-ux-matters-2-bis, echo=FALSE, fig.cap="(ref:hexmakecap)", out.width="100%"}
+```{r 06-ux-matters-2, echo=FALSE, fig.cap="(ref:hexmakecap)", out.width="100%"}
 knitr::include_graphics("img/hexmake.png")
 ```
 
@@ -89,7 +89,7 @@ This is what is called "defensive programming" - you prevent the application fro
 
 For example, consider this small app: 
 
-```{r 06-ux-matters-1, eval = FALSE}
+```{r 06-ux-matters-3, eval = FALSE}
 library(shiny)
 ui <- function(){
   tagList(
@@ -154,7 +154,7 @@ One good practice is to try, as much as possible, to __wrap all server calls in 
 That way, you can, for example, send a notification to the user if the process fails, either using a `{shiny}` [@R-shiny] notification function, an external package like `{shinyalert}` [@R-shinyalert], or a custom JavaScript alert like [notify.js](https://github.com/ColinFay/notifyjsexample).
 Here is a pseudo-code pattern for this using the `{attempt}` [@R-attempt] package:
 
-```{r 06-ux-matters-2, eval = FALSE}
+```{r 06-ux-matters-4, eval = FALSE}
 library(shiny)
 ui <- function(){
   # Here, we would define the interface
@@ -251,7 +251,7 @@ Compare this native design:
 
 (ref:tidytuesdaybutton1cap) Snapshot of `{tidytuesday201942}` without borders around the 'Render Plot' button.
 
-```{r 06-ux-matters-3-bis, echo=FALSE, fig.cap="(ref:tidytuesdaybutton1cap)", out.width="100%"}
+```{r 06-ux-matters-5, echo=FALSE, fig.cap="(ref:tidytuesdaybutton1cap)", out.width="100%"}
 knitr::include_graphics("img/tidytuesdaybutton1.png")
 ```
 
@@ -259,7 +259,7 @@ To the one with a little bit of CSS (which is the one online):
 
 (ref:tidytuesdaybutton2cap) Snapshot of `{tidytuesday201942}` with borders around the 'Render Plot' button.
 
-```{r 06-ux-matters-4-bis, echo=FALSE, fig.cap="(ref:tidytuesdaybutton2cap)", out.width="100%"}
+```{r 06-ux-matters-6, echo=FALSE, fig.cap="(ref:tidytuesdaybutton2cap)", out.width="100%"}
 knitr::include_graphics("img/tidytuesdaybutton2.png")
 ```
 
@@ -308,7 +308,7 @@ Well, apply that approach to your app, that will prevent from unwanted mistakes.
 
 Note that when using the `golem::use_utils_ui()` function, you will end with a script of UI tools, one being `with_red_star`, which adds a little red star at the end of the text you are entering, a common pattern for signifying that a field is mandatory:
 
-```{r 06-ux-matters-3, echo = FALSE}
+```{r 06-ux-matters-7, echo = FALSE}
 with_red_star <- function(text) {
   htmltools::tags$span(
     HTML(
@@ -323,7 +323,7 @@ with_red_star <- function(text) {
 }
 ```
 
-```{r 06-ux-matters-4 }
+```{r 06-ux-matters-8 }
 with_red_star("Enter your name here")
 ```
 
@@ -333,7 +333,7 @@ And, at the same time, helping them correct themselves after an error is the bes
 
 Let's refactor our app from before, using the `{shinyFeedback}` [@R-shinyFeedback] package.
 
-```{r 06-ux-matters-5, eval = FALSE}
+```{r 06-ux-matters-9, eval = FALSE}
 library(shiny)
 library(shinyFeedback)
 
@@ -431,7 +431,7 @@ In the `{tidytuesday201942}` application example, let's imagine all the elements
 
 (ref:uxtidytuesdayappcap) Snapshot of the `{tidytuesday201942}` `{shiny}` application.
 
-```{r 06-ux-matters-5-bis, echo=FALSE, fig.cap="(ref:uxtidytuesdayappcap)", out.width="100%"}
+```{r 06-ux-matters-10, echo=FALSE, fig.cap="(ref:uxtidytuesdayappcap)", out.width="100%"}
 knitr::include_graphics("img/tidytuesdayapp.png")
 ```
 
@@ -468,7 +468,7 @@ With this kind of graphs, users might lose some time focusing on understanding w
 
 (ref:plotlycap) Output of a `{plotly}` output, with all available buttons shown.
 
-```{r 06-ux-matters-6-bis, echo=FALSE, fig.cap="(ref:plotlycap)", out.width="100%"}
+```{r 06-ux-matters-11, echo=FALSE, fig.cap="(ref:plotlycap)", out.width="100%"}
 knitr::include_graphics("img/plotly.png")
 ```
 
@@ -516,7 +516,7 @@ In HTML, there are two kind of elements: the one without "meanings" like `<div>`
 The second ones are called "semantic tags", as they have a specific meaning in the sense that they define what they contain. 
 Same thing as with headers, these elements are crucial for the screen readers to understand what the page contains.
 
-```{r 06-ux-matters-6, eval = FALSE}
+```{r 06-ux-matters-12, eval = FALSE}
 library(htmltools)
 # Using the `article` tag for a better semantic
 tags$article(
@@ -532,7 +532,7 @@ Tags attributes are complementary elements you can add to a tag to add informati
 But these can also be used to add, for example, an alternate text to an image: this `alt` being the one which is read when the image is not available, either because the page could not reach the resource, or because the person navigating the app is using a screen to speech technology. 
 To do this, we can use the `tagAppendAttributes()` function from `{shiny}`, which allows to add attributes to an HTML element. 
 
-```{r 06-ux-matters-7, eval = FALSE}
+```{r 06-ux-matters-13, eval = FALSE}
 library(shiny)
 ui <- function(){
   # Generating a UI with one plot
@@ -575,7 +575,7 @@ When building your app, thinking about how these users will be able to use it is
 As much as possible, make everything doable with a keyboard: for example, if you have a `textInput()` with a validation button below, allow the user to validate by pressing the ENTER on their keyboard.
 This can for example be done with the `{nter}` package, which is available only on GitHub^[https://github.com/JohnCoene/nter] at the time of writing these lines.
 
-```{r 06-ux-matters-9, eval=FALSE}
+```{r 06-ux-matters-14, eval=FALSE}
 # Adapted from https://github.com/JohnCoene/nter
 library(nter)
 library(shiny)
@@ -620,7 +620,7 @@ That is why we recommend using the `viridis` [@R-viridis] palette, which has bee
 
 Here are for example a visualization through the lens of various type of color blindness: 
 
-```{r 06-ux-matters-10 }
+```{r 06-ux-matters-15 }
 # This function generates a plot for an internal matrix, and takes a palette as
 # parameter so that we can display the plot using various palettes, as (the
 # palette should be a function)
@@ -642,20 +642,20 @@ With the `jet.colors` palette from `{matlab}` [@R-matlab]
 
 (ref:jetcolors) Original view of `jet.colors` palette from `{matlab}`.
 
-```{r 06-ux-matters-11, fig.cap="(ref:jetcolors)"}
+```{r 06-ux-matters-16, fig.cap="(ref:jetcolors)"}
 with_palette(matlab::jet.colors)
 ```
 
 (ref:viridis) Original view of `viridis` palette from `{viridis}`.
 
-```{r 06-ux-matters-12, fig.cap='(ref:viridis)'}
+```{r 06-ux-matters-17, fig.cap='(ref:viridis)'}
 with_palette(viridis::viridis)
 ```
 
 Even without color-blindness, it's already way more readable.
 But let's now use the `{dichromat}` [@R-dichromat] package to simulate color blindness.
 
-```{r 06-ux-matters-13 }
+```{r 06-ux-matters-18 }
 library(dichromat)
 library(purrr, warn.conflicts = FALSE)
 ```
@@ -664,7 +664,7 @@ library(purrr, warn.conflicts = FALSE)
 
 (ref:jetcolorsdeutan) View of `jet.colors` palette for a Deuteranopian.
 
-```{r 06-ux-matters-14, fig.cap="(ref:jetcolorsdeutan)"}
+```{r 06-ux-matters-19, fig.cap="(ref:jetcolorsdeutan)"}
 deutan_jet_color <- function(n){
   cols <- matlab::jet.colors(n)
   dichromat(cols, type = "deutan")
@@ -674,7 +674,7 @@ with_palette( deutan_jet_color )
 
 (ref:viridisdeutan) View of `viridis` palette for a Deuteranopian.
 
-```{r 06-ux-matters-7-bis, fig.cap="(ref:viridisdeutan)"}
+```{r 06-ux-matters-20, fig.cap="(ref:viridisdeutan)"}
 deutan_viridis <- function(n){
   cols <- viridis::viridis(n)
   dichromat(cols, type = "deutan")
@@ -687,7 +687,7 @@ with_palette( deutan_viridis )
 (ref:jetcolorsprotan) View of `jet.colors` palette for a Protanopian.
 
 
-```{r 06-ux-matters-15, fig.cap="(ref:jetcolorsprotan)"}
+```{r 06-ux-matters-21, fig.cap="(ref:jetcolorsprotan)"}
 protan_jet_color <- function(n){
   cols <- matlab::jet.colors(n)
   dichromat(cols, type = "protan")
@@ -697,7 +697,7 @@ with_palette( protan_jet_color )
 
 (ref:viridisprotan) View of `viridis` palette for a Protanopian.
 
-```{r 06-ux-matters-8-bis, fig.cap="(ref:viridisprotan)"}
+```{r 06-ux-matters-22, fig.cap="(ref:viridisprotan)"}
 protan_viridis <- function(n){
   cols <- viridis::viridis(n)
   dichromat(cols, type = "protan")
@@ -709,7 +709,7 @@ with_palette( protan_viridis )
 
 (ref:jetcolorstritan) View of `jet.colors` palette for a Tritanopian.
 
-```{r 06-ux-matters-16, fig.cap="(ref:jetcolorstritan)", out.width="100%"}
+```{r 06-ux-matters-23, fig.cap="(ref:jetcolorstritan)", out.width="100%"}
 tritan_jet_color <- function(n){
   cols <- matlab::jet.colors(n)
   dichromat(cols, type = "tritan")
@@ -719,7 +719,7 @@ with_palette( tritan_jet_color )
 
 (ref:viridistritan) View of `viridis` palette for a Tritanopian.
 
-```{r 06-ux-matters-9-bis, fig.cap="(ref:viridistritan)", out.width="100%"}
+```{r 06-ux-matters-24, fig.cap="(ref:viridistritan)", out.width="100%"}
 tritan_viridis <- function(n){
   cols <- viridis::viridis(n)
   dichromat(cols, type = "tritan")
@@ -743,13 +743,13 @@ For example,
 
 (ref:blurredvision) Emulating blurred vision with Google Chrome.
 
-```{r echo=FALSE, fig.cap="(ref:blurredvision)", out.width="100%"}
+```{r 06-ux-matters-25, echo=FALSE, fig.cap="(ref:blurredvision)", out.width="100%"}
 knitr::include_graphics("img/blurred-vision.png")
 ```
 
 (ref:deuto) Emulating deutoranopia with Google Chrome.
 
-```{r echo=FALSE, fig.cap="(ref:deuto)", out.width="100%"}
+```{r 06-ux-matters-26, echo=FALSE, fig.cap="(ref:deuto)", out.width="100%"}
 knitr::include_graphics("img/deuto.png")
 ```
 
@@ -766,7 +766,7 @@ There are several tools on the web that can evaluate the accessibility of your w
 (ref:accessibilitycap) Web accessibility results for the `{hexmake}` application.
 
 
-```{r 06-ux-matters-10-bis, echo=FALSE, fig.cap="(ref:accessibilitycap)", out.width="100%"}
+```{r 06-ux-matters-27, echo=FALSE, fig.cap="(ref:accessibilitycap)", out.width="100%"}
 knitr::include_graphics("img/hexmakeaccessibility.png")
 ```
 
