--- a/10-step-by-step-build.Rmd
+++ b/10-step-by-step-build.Rmd
@@ -21,7 +21,7 @@ When you are building a `{shiny}` [@R-shiny] application, you will have to deal 
 Well, at least with one dependency, `{shiny}`. 
 But chances are that you will not only be using `{shiny}` inside your application: you will probably call functions from other packages, for example from `{ggplot2}` [@R-ggplot2] for plotting, or any other package that is necessary for your application to work. 
 
-```{r 11-step-by-step-build-1, echo = FALSE}
+```{r 10-step-by-step-build-1, echo = FALSE}
 paks <-  eval(formals(golem::use_recommended_deps)$recommended)
 paks <- grep("shiny|golem", paks, invert = TRUE, value = TRUE)
 paks <- paste0("`{", eval(formals(golem::use_recommended_deps)$recommended), "}`")
@@ -62,7 +62,7 @@ To do so, we will need to go to every script that defines one or several functio
 Note that you can also use explicit namespacing, _i.e_ the `pkg::function()` notation inside your code. 
 And that if you need a little help to identify dependencies, all the explicitly namespaced calls (`pkg::function()`) can be scraped using the `{attachment}` [@R-attachment] package:
 
-```{r 11-step-by-step-build-2, eval = FALSE}
+```{r 10-step-by-step-build-2, eval = FALSE}
 # This function will read all the scripts in the R/ folder and 
 # try to guess required dependencies
 attachment::att_from_rscripts()
@@ -91,7 +91,7 @@ In the `{golem}` world, these are `utils_*` and `fct_*` files:
 
 Two functions can be called to create these files: 
 
-```{r 11-step-by-step-build-3, eval = FALSE}
+```{r 10-step-by-step-build-3, eval = FALSE}
 # Adding fct_ and utils_ files to the project
 golem::add_fct( "helpers" ) 
 golem::add_utils( "helpers" )
@@ -115,7 +115,7 @@ As you can see, the difference is that `fct_*` file are more "topic centered", i
 
 Note that when building a module with `golem::add_module()`, you can add a module specific `fct_*` or  `utils_*` file:
 
-```{r 11-step-by-step-build-4, eval = FALSE}
+```{r 10-step-by-step-build-4, eval = FALSE}
 # Creating the fct_ and utils_ file along the module creation
 golem::add_module("rendering", fct = "connect", utils = "wrapper")
 ```
@@ -128,7 +128,7 @@ Will create:
 
 And this can also be done the other way around, by specifying the module you want to link your file to:
 
-```{r 11-step-by-step-build-5, eval = FALSE}
+```{r 10-step-by-step-build-5, eval = FALSE}
 # Linking the utils_wrapper file to the rendering module
 golem::add_utils("wrapper", module = "rendering")
 ```
@@ -143,7 +143,7 @@ If you have followed every steps from the `01_start.R` file, you already have a 
 But as it is hard to find tests that are relevant to all applications (as every application is unique), you will have to add and fill manually the tests that will check your app. 
 And right now, to add a new testing file, you can call:
 
-```{r 11-step-by-step-build-6, eval = FALSE}
+```{r 10-step-by-step-build-6, eval = FALSE}
 # Generate the testing infrastructure
 usethis::use_test("app")
 ```
@@ -159,14 +159,14 @@ The good news is that if you have been using our "Rmd first" method, you already
 Depending on how you applied this principle, these Rmd files might live inside the `inst/` folder, or already as package Vignettes.
 If you need to add a new Vignette, be it for adding an Rmd describing the back-end or a global documentation about the application, you can call the `use_vignette()` function from `{usethis}`.
 
-```{r 11-step-by-step-build-7, eval = FALSE}
+```{r 10-step-by-step-build-7, eval = FALSE}
 # Adding a new Vignette named "shinyexample"
 usethis::use_vignette("shinyexample")
 ```
 
 Then, you can build all the Vignettes with:
 
-```{r 11-step-by-step-build-8, eval = FALSE}
+```{r 10-step-by-step-build-8, eval = FALSE}
 # Compiling the Vignettes
 devtools::build_vignettes()
 ```
@@ -180,7 +180,7 @@ You can do this locally, or you can use online services like Appveyor, an online
 
 To add it to your application, call the `use_coverage()` function from the `{usethis}` package: 
 
-```{r 11-step-by-step-build-9, eval = FALSE}
+```{r 10-step-by-step-build-9, eval = FALSE}
 # Adding the correct code coverage infrastructure in your application
 usethis::use_coverage()
 ```
@@ -189,14 +189,14 @@ At the time of writing these lines, this function supports two services: [CodeCo
 
 Note that you can also perform code coverage locally, using the `{covr}` [@R-covr] package, and the `package_coverage()` function.
 
-```{r 11-step-by-step-build-10, eval = FALSE}
+```{r 10-step-by-step-build-10, eval = FALSE}
 # Compute the code coverage of your application
 code_coverage <- covr::package_coverage()
 ```
 
 For example, figure \@ref(fig:golemcov) is the output of running the `package_coverage()` function on the `{golem}` package on the 2020-04-29 on the `dev` branch: 
 
-```{r golemcov, echo=FALSE, fig.cap="`{golem}` code coverage results", out.width="100%"}
+```{r 10-step-by-step-build-11, echo=FALSE, fig.cap="`{golem` code coverage results", out.width="100%"}
 knitr::include_graphics("img/golemcov.png")
 ```
 
@@ -208,7 +208,7 @@ Another example is writing your `if/else` statement on one line `if (this) that 
 
 Note that you can also identify files with zero code coverage using the `covr::zero_coverage(covr::package_coverage())` function, which, instead of printing back a metric of coverage for each file, will point to all the lines that are not covered by tests inside your package, as show in figure \@ref(fig:zerocov):
 
-```{r zerocov, echo=FALSE, fig.cap="`{golem}` files with zero code coverage", out.width="100%"}
+```{r 10-step-by-step-build-12, echo=FALSE, fig.cap="`{golem` files with zero code coverage", out.width="100%"}
 knitr::include_graphics("img/zerocov.png")
 ```
 
@@ -216,7 +216,7 @@ To sum up: do not set an arbitrary code coverage percentage goal, but rather use
 With CodeCov, you can get a timeline of the evolution of code coverage: a good tool for judging when you need to write more tests. 
 For example, figure \@ref(fig:codecov-tibble) is the general tendency for the code coverage of the `{tibble}` package over the last 6 months (November 2019 - April 2020): 
 
-```{r codecov-tibble, echo=FALSE, fig.cap="CodeCov.io results for the `{tibble}` package", out.width="100%"}
+```{r 10-step-by-step-build-13, echo=FALSE, fig.cap="CodeCov.io results for the `{tibble` package", out.width="100%"}
 knitr::include_graphics("img/codecov-tibble.png")
 ```
 
@@ -261,14 +261,14 @@ In other words, by setting `options( "golem.app.prod" )` to `TRUE`, you will mak
 
 Some functions pre-exist in `{golem}`, for example if you need to print a message to the console only during dev, you can do it with `cat_dev()`.
 
-```{r 11-step-by-step-build-14, eval = TRUE}
+```{r 10-step-by-step-build-14, eval = TRUE}
 # Setting the option to FALSE
 options( "golem.app.prod" = FALSE)
 # Function runs as expected
 golem::cat_dev("In dev\n")
 ```
 
-```{r 11-step-by-step-build-15 }
+```{r 10-step-by-step-build-15 }
 # Switching the option to TRUE
 options( "golem.app.prod" = TRUE)
 # Nothing is printing
@@ -279,7 +279,7 @@ Of course, chances are you do not only need to print things, you might want to u
 Good news!
 You can make any function being "dev-dependent" with the `make_dev()` function: 
 
-```{r 11-step-by-step-build-16, eval = TRUE}
+```{r 10-step-by-step-build-16, eval = TRUE}
 # Same mechanism as cat_dev, but with other functions 
 log_dev <- golem::make_dev(log)
 options( "golem.app.prod" = FALSE)
