--- a/14-when_optimize.Rmd
+++ b/14-when_optimize.Rmd
@@ -26,7 +26,7 @@ Once the application is ready: here in our example, we can only detect the bottl
 
 (ref:bottleneck) Road bottleneck, from WikiMedia <https://commons.wikimedia.org/wiki/File:Roadway_section_with_bottleneck.png>
 
-```{r 15-when-optimize-1, echo=FALSE, fig.cap="(ref:bottleneck)", out.width="100%"}
+```{r 14-when-optimize-1, echo=FALSE, fig.cap="(ref:bottleneck)", out.width="100%"}
 knitr::include_graphics("img/bottleneck.png")
 ```
 
@@ -81,7 +81,7 @@ Also, are the extra hours/days spent rewriting a working code-base worth the spe
 For example, let's compare both these implementations of the same function, one in R, and one in C++ via `{Rcpp}` [@R-Rcpp]
 Of course, the C++ function is faster than the R one—this is the very reason of using C++ with R. 
 
-```{r 15-when-optimize-2 }
+```{r 14-when-optimize-2 }
 library("Rcpp")
 # A C++ function to compute the mean
 cppFunction("
@@ -142,7 +142,7 @@ Using this package is quite straightforward: put the code you want to benchmark 
 
 Here is an example with 3 nested functions, `top()`, `middle()` and `bottom()`, where `top()` calls `middle()` which calls `bottom()`:
 
-```{r 15-when-optimize-3, eval = FALSE}
+```{r 14-when-optimize-3, eval = FALSE}
 library(profvis)
 top <- function(){
   # We use profvis::pause() because Sys.sleep() doesn't 
@@ -196,7 +196,7 @@ First, R pauses, then does a series of call to `FUN` (which is the internal anon
 
 (ref:profvizflame) `{profvis}` flame graph 
 
-```{r 15-when-optimize-4, echo=FALSE, fig.cap="(ref:profvizflame)", out.width="100%"}
+```{r 14-when-optimize-4, echo=FALSE, fig.cap="(ref:profvizflame)", out.width="100%"}
 knitr::include_graphics("img/profviz_flame.png")
 ```
 
@@ -204,14 +204,14 @@ If you click on the "Data" tab, you will also find another view of the `flame gr
 
 (ref:profvizdata) `{profvis}` data tab
 
-```{r 15-when-optimize-5, echo=FALSE, fig.cap="(ref:profvizdata)", out.width="100%"}
+```{r 14-when-optimize-5, echo=FALSE, fig.cap="(ref:profvizdata)", out.width="100%"}
 knitr::include_graphics("img/profviz_data.png")
 ```
 
 
 If you are working on profiling the memory usage, you can also use the `{profmem}` [@R-profmem] package which, instead of focusing on execution time, will record the memory usage of calls. 
 
-```{r 15-when-optimize-6 }
+```{r 14-when-optimize-6 }
 library(profmem)
 # Computing the memory used by each c
 p <- profmem({
@@ -223,13 +223,13 @@ p
 
 You can also get the total allocated memory with:
 
-```{r 15-when-optimize-7 }
+```{r 14-when-optimize-7 }
 total(p)
 ```
 
 And extract specific values based on the memory allocation:
 
-```{r 15-when-optimize-8 }
+```{r 14-when-optimize-8 }
 p2 <- subset(p, bytes > 1000)
 print(p2)
 ```
@@ -261,7 +261,7 @@ Note that by default, the `mark()` function compares the output of each function
 
 Once the timing is done, you will get a data.frame with various metrics about the benchmark.
 
-```{r 15-when-optimize-9 }
+```{r 14-when-optimize-9 }
 # Multiplying each element of a vector going from 1 to size
 # with a for loop 
 for_loop <- function(size){
@@ -289,7 +289,7 @@ If you want a graphical analysis, `{bench}` comes with an `autoplot` method for 
 
 (ref:benchautoplot) `{bench}` autoplot 
 
-```{r 15-when-optimize-10, fig.cap="(ref:benchautoplot)", out.width="100%"}
+```{r 14-when-optimize-10, fig.cap="(ref:benchautoplot)", out.width="100%"}
 ggplot2::autoplot(res)
 ```
 
@@ -344,7 +344,7 @@ Note that you can also install a command line tool with `npm install -g lighthou
 
 (ref:lighthouseaudit) Launching LightHouse audit from the Google Chrome
 
-```{r lighthouseaudit, echo=FALSE, fig.cap="(ref:lighthouseaudit)", out.width="100%"}
+```{r 14-when-optimize-11, echo=FALSE, fig.cap="(ref:lighthouseaudit)", out.width="100%"}
 knitr::include_graphics("img/lighthouse-audit.png")
 ```
 
@@ -353,7 +353,7 @@ See figure \@ref(fig:lighthouseres) for a screenshot of the results computed by 
 
 (ref:lighthouseres) LightHouse audit results
 
-```{r lighthouseres, echo=FALSE, fig.cap="(ref:lighthouseres)", out.width="100%"}
+```{r 14-when-optimize-12, echo=FALSE, fig.cap="(ref:lighthouseres)", out.width="100%"}
 knitr::include_graphics("img/lighthouse-audit-results.png")
 ```
 
@@ -384,7 +384,7 @@ lighthouse --output json --output-path data-raw/output.json http://localhost:281
 
 Then, being a JSON file, you can call if from R:
 
-```{r 15-when-optimize-13 }
+```{r 14-when-optimize-13 }
 # Reading the JSON output of your lighthouse audit, and displaying the Speed Index value
 lighthouse_report <- jsonlite::read_json("data-raw/output.json")
 lighthouse_report$audits$`speed-index`$displayValue
@@ -396,13 +396,13 @@ Here are for example some of the results, focused on performance, with there res
 
 ##### "First Meaningful Paint" {-}
 
-```{r 15-when-optimize-14 }
+```{r 14-when-optimize-14 }
 # Each audit point contains a description, that explains what this 
 # value stands for
 lighthouse_report$audits$`first-meaningful-paint`$description
 ```
 
-```{r 15-when-optimize-15 }
+```{r 14-when-optimize-15 }
 # We can turn the results into a data frame
 lighthouse_report$audits$`first-meaningful-paint` %>%
   as.data.frame() %>%
@@ -412,12 +412,12 @@ lighthouse_report$audits$`first-meaningful-paint` %>%
 
 ##### "Speed Index" {-}
 
-```{r 15-when-optimize-16 }
+```{r 14-when-optimize-16 }
 lighthouse_report$audits$`speed-index`$description
 ```
 
 
-```{r 15-when-optimize-17 }
+```{r 14-when-optimize-17 }
 lighthouse_report$audits$`speed-index` %>%
   as.data.frame() %>%
   dplyr::select(title, score, displayValue) %>%
@@ -426,12 +426,12 @@ lighthouse_report$audits$`speed-index` %>%
 
 ##### "Estimated Input Latency" {-}
 
-```{r 15-when-optimize-18 }
+```{r 14-when-optimize-18 }
 lighthouse_report$audits$`estimated-input-latency`$description 
 ```
 
 
-```{r 15-when-optimize-19 }
+```{r 14-when-optimize-19 }
 lighthouse_report$audits$`estimated-input-latency` %>%
   as.data.frame() %>%
   dplyr::select(title, score, displayValue) %>%
@@ -440,12 +440,12 @@ lighthouse_report$audits$`estimated-input-latency` %>%
 
 ##### "Total Blocking Time" {-}
 
-```{r 15-when-optimize-20 }
+```{r 14-when-optimize-20 }
 lighthouse_report$audits$`total-blocking-time`$description 
 ```
 
 
-```{r 15-when-optimize-21 }
+```{r 14-when-optimize-21 }
 lighthouse_report$audits$`total-blocking-time` %>%
   as.data.frame() %>%
   dplyr::select(title, score, displayValue) %>%
@@ -454,11 +454,11 @@ lighthouse_report$audits$`total-blocking-time` %>%
 
 ##### "Time to first Byte" {-}
 
-```{r 15-when-optimize-22 }
+```{r 14-when-optimize-22 }
 lighthouse_report$audits$`time-to-first-byte`$description 
 ```
 
-```{r 15-when-optimize-23 }
+```{r 14-when-optimize-23 }
 lighthouse_report$audits$`time-to-first-byte` %>%
   .[c("title", "score", "displayValue")] %>%
   as.data.frame() %>%
@@ -509,20 +509,20 @@ Taken from [@Sakamoto2015]
 To minify JavaScript, HTML and CSS files from R, you can use the `{minifyr}` [@R-minifyr] package, that wraps the `node-minify` NodeJS library. 
 For example, compare the size of this file from `{shiny}`:
 
-```{r 15-when-optimize-24, eval = FALSE}
+```{r 14-when-optimize-24, eval = FALSE}
 # Displaying the file size of a CSS file from {shiny}
 fs::file_size(
   system.file("www/shared/shiny.css", package = "shiny")
 ) 
 ```
 
-```{r 15-when-optimize-25, echo = FALSE}
+```{r 14-when-optimize-25, echo = FALSE}
 cat("8.4K")
 ```
 
 To its minified version: 
 
-```{r 15-when-optimize-26, eval = FALSE}
+```{r 14-when-optimize-26, eval = FALSE}
 # Using the {minifyr} package to minify the CSS file
 minified <- minifyr::minifyr_css_cleancss(
   system.file("www/shared/shiny.css", package = "shiny"), 
@@ -530,12 +530,12 @@ minified <- minifyr::minifyr_css_cleancss(
 ) 
 ```
 
-```{r 15-when-optimize-27, eval = FALSE}
+```{r 14-when-optimize-27, eval = FALSE}
 # Minifying can help you gain kilobytes
 fs::file_size(minified)
 ```
 
-```{r 15-when-optimize-28 }
+```{r 14-when-optimize-28 }
 cat("5.91K")
 ```
 
