--- a/18-css.Rmd
+++ b/18-css.Rmd
@@ -17,7 +17,7 @@ For example, here is what [rtask.thinkr.fr](https://rtask.thinkr.fr) looks like:
 
 (ref:rtaskcss) https://rtask.thinkr.fr with CSS
 
-```{r 08-css-1-bis, echo=FALSE, fig.cap="(ref:rtaskcss)", out.width="100%"}
+```{r 18-css-1, echo=FALSE, fig.cap="(ref:rtaskcss)", out.width="100%"}
 knitr::include_graphics("img/rtask_with_css.png")
 ```
 
@@ -26,13 +26,13 @@ And here is what it looks like without CSS:
 
 (ref:rtaskwithoutcss) https://rtask.thinkr.fr without CSS
 
-```{r 08-css-2-bis, echo=FALSE, fig.cap="(ref:rtaskwithoutcss)", out.width="100%"}
+```{r 18-css-2, echo=FALSE, fig.cap="(ref:rtaskwithoutcss)", out.width="100%"}
 knitr::include_graphics("img/rtask_without_css.png")
 ```
 
 (ref:rtaskwithoutcss2) https://rtask.thinkr.fr without CSS
 
-```{r 08-css-3-bis, echo=FALSE, fig.cap="(ref:rtaskwithoutcss2)", out.width="100%"}
+```{r 18-css-3, echo=FALSE, fig.cap="(ref:rtaskwithoutcss2)", out.width="100%"}
 knitr::include_graphics("img/rtask_without_css2.png")
 ```
 
@@ -47,7 +47,7 @@ Compare:
 
 (no `fluidPage`)
 
-```{r 08-css-1 , eval = FALSE}
+```{r 18-css-4, eval = FALSE}
 library(shiny)
 ui <- function(){
   tagList(
@@ -71,14 +71,14 @@ shinyApp(ui, server)
 
 (ref:nocssshiny) `{shiny}` without CSS
 
-```{r 08-css-4-bis, echo=FALSE, fig.cap="(ref:nocssshiny)", out.width="100%"}
+```{r 18-css-5, echo=FALSE, fig.cap="(ref:nocssshiny)", out.width="100%"}
 knitr::include_graphics("img/no-css-shiny.png")
 ```
 
 
 to (with `fluidPage`):
 
-```{r 08-css-2, eval = FALSE}
+```{r 18-css-6, eval = FALSE}
 library(shiny)
 ui <- function(){
   fluidPage(
@@ -102,7 +102,7 @@ shinyApp(ui, server)
 
 (ref:cssshiny) `{shiny}` with its default CSS
 
-```{r 08-css-5, echo=FALSE, fig.cap="(ref:cssshiny)", out.width="100%"}
+```{r 18-css-7, echo=FALSE, fig.cap="(ref:cssshiny)", out.width="100%"}
 knitr::include_graphics("img/css-shiny.png")
 ```
 
@@ -173,7 +173,7 @@ Note that the good practice is considered to be the integration of an external f
 
 If you need to add style to one specific element, you can write it straight inside the HTML tag:
 
-```{r 08-css-3, eval = FALSE }
+```{r 18-css-8, eval = FALSE }
 library(shiny)
 ui <- function(){
   tagList(
@@ -194,7 +194,7 @@ shinyApp(ui, server)
 
 (ref:cssshinyred) `{shiny}` with a red title
 
-```{r 08-css-6, echo=FALSE, fig.cap="(ref:cssshinyred)", out.width="100%"}
+```{r 18-css-9, echo=FALSE, fig.cap="(ref:cssshinyred)", out.width="100%"}
 knitr::include_graphics("img/css-red.png")
 ```
 
@@ -208,7 +208,7 @@ If you had a `tags$style()` somewhere inside your UI code (generally at the very
 
 Here is an example: 
 
-```{r 08-css-4, eval = FALSE}
+```{r 18-css-10, eval = FALSE}
 library(shiny)
 ui <- function(){
   tagList(
@@ -234,7 +234,7 @@ shinyApp(ui, server)
 
 (ref:cssshinyred2) `{shiny}` with a red title
 
-```{r 08-css-7, echo=FALSE, fig.cap="(ref:cssshinyred2)", out.width="100%"}
+```{r 18-css-11, echo=FALSE, fig.cap="(ref:cssshinyred2)", out.width="100%"}
 knitr::include_graphics("img/css-red.png")
 ```
 
