--- a/19-appendix.Rmd
+++ b/19-appendix.Rmd
@@ -62,7 +62,7 @@ Here is the concept map for this application, using Xmind.
 
 (ref:conceptmapminifyr) A concept map for the minifying application
 
-```{r echo=FALSE, fig.cap="(ref:conceptmapminifyr)", out.width="100%"}
+```{r 19-appendix-1, echo=FALSE, fig.cap="(ref:conceptmapminifyr)", out.width="100%"}
 knitr::include_graphics("img/minifyr-map.png")
 ```
 
@@ -99,7 +99,7 @@ Nothing of the like: they should be using this application while developing, so 
 
 Let's pick two random names for our personas, and two fake companies where they might be working at.
 
-```{r}
+```{r 19-appendix-2}
 withr::with_seed(
   608, {
     nms <- charlatan::ch_name(2)
@@ -133,7 +133,7 @@ Once we have the back-end settled and the UI defined, we will be working on maki
 
 Our back-end will be composed of two functions: 
 
-```{r echo = FALSE}
+```{r 19-appendix-3, echo = FALSE}
 library(minifyr)
 minif <- ls("package:minifyr", pattern = "minifyr_js_")
 minif <- paste0("`", minif, "()`")
@@ -145,7 +145,7 @@ minif <- knitr::combine_words(paste0("`", minif, "()`"))
 If the type is not guessed based on the extension, the function should fail gracefully, and not make `{shiny}` crash. 
 We'll chose to return an empty string if this extension is not guessed.
 
-```{r}
+```{r 19-appendix-4}
 library(minifyr)
 guess_minifier <- function(file){
   # We'll start by getting the file extension
@@ -201,7 +201,7 @@ guess_minifier(
 + A `compress()` function, which takes three parameters: the file as `input`, the `algo`, outputed from our last function, nd the selection, which is the one selected by the user. 
 The compressed file will be outputed to a tempfile.
 
-```{r}
+```{r 19-appendix-5}
 compress <- function(algo, selection){
   # Creating a tempfile using our algo object
   tps <- tempfile(fileext = sprintf(".%s", algo$ext))
@@ -228,7 +228,7 @@ compress(
 + Finally, a `compare()` function, that can compare the size of two files, so that we can measure the minification gain.
 This function will take two file paths. 
 
-```{r}
+```{r 19-appendix-6}
 compare <- function(original, minified){
   # Get the file size of both
   original <- fs::file_info(original)$size
@@ -240,7 +240,7 @@ compare <- function(original, minified){
 
 So, for the complete process:
 
-```{r}
+```{r 19-appendix-7}
 algo <- guess_minifier(
   minifyr_example("js")
 )
@@ -263,7 +263,7 @@ Let's start by drawing a small mock-up of our front-end using [Excalidraw](https
 
 (ref:excalidraw) A mock-up for the UI of our application, made with Excalidraw (https://excalidraw.com/)
 
-```{r echo=FALSE, fig.cap="(ref:excalidraw)", out.width="100%"}
+```{r 19-appendix-8, echo=FALSE, fig.cap="(ref:excalidraw)", out.width="100%"}
 knitr::include_graphics("img/excalidraw.png")
 ```
 
@@ -326,7 +326,7 @@ To prevent that, we will be caching the function that does the computation.
 + Create an unseen input that will upload data, so that we can build an interactivity test using `{crrry}`. 
 This input will look like this on the server:
 
-```{r}
+```{r 19-appendix-9}
   observeEvent( input$testingtrigger , {
     
     if (golem::app_dev()){
@@ -343,7 +343,7 @@ This input will look like this on the server:
 
 We use this pattern so that we can combine it with a testing suite with `{crrry}`, using the following pattern:
 
-```{r eval = FALSE}
+```{r 19-appendix-10, eval = FALSE}
 test <- crrry::CrrryProc$new(
   chrome_bin = pagedown::find_chrome(),
   # Process to launch locally
