--- a/20-session-info.Rmd
+++ b/20-session-info.Rmd
@@ -2,12 +2,12 @@
 
 The current version of this book has been compiled on:
 
-```{r 20-appendix-1}
+```{r 20-session-info-1 }
 Sys.Date()
 ```
 
 With the following configuration:
 
-```{r 20-appendix-2}
+```{r 20-session-info-2 }
 xfun::session_info()
 ```
