--- a/index.Rmd
+++ b/index.Rmd
@@ -207,14 +207,14 @@ Package names are in curly brackets in code format (e.g., `{rmarkdown}`), and in
 Function names are formatted in a typewriter font and followed by parentheses (e.g., `render_book()`).
 Larger code blocks are formated in a typewrite font and have a grey backgroud, e.g:  
 
-```{r eval=FALSE}
+```{r index-2, eval=FALSE}
 install.package("golem")
 ```
 
 When we describe a package that can be installed from GitHub, we use the `install_github()` function from the `{remotes}` [@R-remotes] package. 
 In other words, the following code:
 
-```{r eval = FALSE}
+```{r index-3, eval = FALSE}
 remotes::install_github("ColinFay/dockerstats")
 ```
 
