--- a/11-step-by-step-secure.Rmd
+++ b/11-step-by-step-secure.Rmd
@@ -1,6 +1,6 @@
 # (PART) Step 4: Strengthen {-}
 
-```{r 12-step-by-step-secure-1, include = FALSE}
+```{r 11-step-by-step-secure-1, include = FALSE}
 try({
   system("docker kill hexmake")
   system("docker kill xmk2")
@@ -89,7 +89,7 @@ At the time of writing these lines, the `{shiny}` team is actively working on a 
 These features are still a work-in-progress, and are not available in the stable version of `{shiny}` we have used in this book (`r packageVersion("shiny")`).
 Given that these features are still subject to change, we will not go into details about these new features, but here is a preview of what it will look like: 
 
-```{r, eval = FALSE}
+```{r 11-step-by-step-secure-2, eval = FALSE}
 # Given the following module
 computation_module_server <- function(input, output, session){
   ns <- session$ns
@@ -171,7 +171,7 @@ And to do the tests in a `puppeteer` spirit, you can refer to the `{crrry}` pack
 
 Here is an example:
 
-```{r 12-step-by-step-secure-2, eval = TRUE}
+```{r 11-step-by-step-secure-3, eval = TRUE}
 # Creating a new test instance
 test <- crrry::CrrryOnPage$new(
   # Using the `find_chrome()` function to guess where the 
@@ -199,7 +199,7 @@ You can then call one of the `test` object methods:
 
 Of course, the interesting part is doing "bulk testing" of your application, for example by setting a series of values to an input:
 
-```{r 12-step-by-step-secure-3, eval = TRUE}
+```{r 11-step-by-step-secure-4, eval = TRUE}
 for (i in letters[1:5]){
   # We'll be setting a series of letters, one by one
   # for the package name input
@@ -212,7 +212,7 @@ for (i in letters[1:5]){
 
 And once your test is done, do not forget to close the connection!
 
-```{r 12-step-by-step-secure-4, eval = TRUE}
+```{r 11-step-by-step-secure-5, eval = TRUE}
 # Closing the connection
 test$stop()
 ```
@@ -233,7 +233,7 @@ Figure \@ref(fig:gremlins) show an example of running gremlins on the prenoms ap
 
 (ref:gremlinscap) Example of using `gremlins.js` on the "prenoms" `{shiny}` application.
 
-```{r gremlins, echo=FALSE, fig.cap="(ref:gremlinscap)", out.width='100%'}
+```{r 11-step-by-step-secure-6, echo=FALSE, fig.cap="(ref:gremlinscap)", out.width='100%'}
 knitr::include_graphics("img/gremlins.png")
 ```
 
@@ -241,7 +241,7 @@ And if you want to scale this, you can also combine it with `{shinyloadtest}` [@
 
 With `{crrry}`, this `gremlins` test comes for free: 
 
-```{r 12-step-by-step-secure-6, eval = FALSE}
+```{r 11-step-by-step-secure-7, eval = FALSE}
 # Creating a new test instance
 test <- crrry::CrrryOnPage$new(
   # Using the `find_chrome()` function to guess where the 
@@ -275,7 +275,7 @@ This package, created and maintained by RStudio, allows you to do a series of sc
 
 If you are building your application with `{golem}` [@R-golem], you will need to add an `app.R` file at the root of your package, then run `shinytest::recordTest()`: 
 
-```{r 12-step-by-step-secure-7, eval = FALSE}
+```{r 11-step-by-step-secure-8, eval = FALSE}
 # Create an app.R file at the root of the package
 golem::add_rstudioconnect_file()
 # Launch a test, and record a series of snapshots of your application
@@ -287,13 +287,13 @@ Using this button, you can take various recording of your shiny application at d
 
 (ref:shinytestcap) General view of a `{shinytest}` window.
 
-```{r shinytestcap, echo=FALSE, fig.cap="(ref:shinytestcap)", out.width='100%'}
+```{r 11-step-by-step-secure-9, echo=FALSE, fig.cap="(ref:shinytestcap)", out.width='100%'}
 knitr::include_graphics("img/shinytest.png")
 ```
 
 Then, you can do some changes in your app, and run:
 
-```{r 12-step-by-step-secure-9, eval = FALSE}
+```{r 11-step-by-step-secure-10, eval = FALSE}
 shinytest::testApp()
 ```
 
@@ -301,7 +301,7 @@ If the `{shinytest}` package detects a visual change in the application, you wil
 
 ### Testing the app load
 
-```{r 12-step-by-step-secure-10, include=FALSE, error=TRUE, eval = TRUE}
+```{r 11-step-by-step-secure-11, include=FALSE, error=TRUE, eval = TRUE}
 try({system("docker rm hexmake")})
 ```
 
@@ -312,11 +312,11 @@ The idea with `{shinyloadtest}` is to first record a session where you mimic a u
 Once the session has been replayed several times mimicking the session you have recorded, you have access to a report of the behavior of your app. 
 
 
-```{r 12-step-by-step-secure-11 }
+```{r 11-step-by-step-secure-12 }
 library(shinyloadtest)
 ```
 
-```{r 12-step-by-step-secure-12, eval = FALSE}
+```{r 11-step-by-step-secure-13, eval = FALSE}
 # Starting your app in another process
 p <- processx::process$new(
   "Rscript", 
@@ -332,7 +332,7 @@ browseURL("http:://localhost:2811")
 
 Record the tests, potentially in a new dir: 
 
-```{r 12-step-by-step-secure-13, eval = FALSE}
+```{r 11-step-by-step-secure-14, eval = FALSE}
 # Creating a directory to receive the logs
 fs::dir_create("shinylogs")
 # Performing the session recording inside this new folder
@@ -354,7 +354,7 @@ The `shinycannon` command line tools take several arguments: the path the `.log`
 
 Then, go to your terminal and run:
 
-```{bash 12-step-by-step-secure-14, eval = FALSE}
+```{bash 11-step-by-step-secure-15, eval = FALSE}
 shinycannon shinylogs/recording.log \
 http://localhost:2811 --workers 10 \
 --output-dir shinylogs/run1
@@ -362,18 +362,18 @@ http://localhost:2811 --workers 10 \
 
 And now, we have new files inside the folder, corresponding to the session recordings. 
 
-```{r 12-step-by-step-secure-15, eval = FALSE}
+```{r 11-step-by-step-secure-16, eval = FALSE}
 # printing the structure of shinylogs
 fs::dir_tree("shinylogs", recurse = FALSE)
 ```
 
-```{r 12-step-by-step-secure-16, echo = FALSE}
+```{r 11-step-by-step-secure-17, echo = FALSE}
 fs::dir_tree("shinylogs", recurse = FALSE, regexp  = "csv$", invert = TRUE)
 ```
 
 Good news: we do not have to manually analyze these files—`{shinyloadtest}` offers a series of wrapper functions to do that. 
 
-```{r 12-step-by-step-secure-17, message = FALSE, warning = FALSE}
+```{r 11-step-by-step-secure-18, message = FALSE, warning = FALSE}
 # Bringing the runs in the R session
 shinyload_runs <- load_runs(
   "5 workers" = "shinylogs/run1"
@@ -382,7 +382,7 @@ shinyload_runs <- load_runs(
 
 We now have a data.frame that looks like this:
 
-```{r 12-step-by-step-secure-18 }
+```{r 11-step-by-step-secure-19 }
 dplyr::glimpse(shinyload_runs)
 ```
 
@@ -393,7 +393,7 @@ For example:
 
 (ref:sessionduration) Session duration
 
-```{r 12-step-by-step-secure-19, fig.cap="(ref:sessionduration)", out.width="100%"}
+```{r 11-step-by-step-secure-20, fig.cap="(ref:sessionduration)", out.width="100%"}
 slt_session_duration(shinyload_runs)
 ```
 
@@ -407,7 +407,7 @@ slt_session_duration(shinyload_runs)
 
 And if you need to bundle everything into an HTML reports, `shinyloadtest_report()` is what you are looking for. 
 
-```{r 12-step-by-step-secure-21, eval = FALSE}
+```{r 11-step-by-step-secure-21, eval = FALSE}
 # Generating the report
 shinyloadtest_report(shinyload_runs)
 ```
@@ -416,7 +416,7 @@ This function will generate an HTML report of all the things computed by `{shiny
 
 (ref:shinyloadtestreport) Webpage generated by `shinyloadtest_report()`
 
-```{r shinyloadtestreport, echo=FALSE, fig.cap="(ref:shinyloadtestreport)", out.width="100%"}
+```{r 11-step-by-step-secure-22, echo=FALSE, fig.cap="(ref:shinyloadtestreport)", out.width="100%"}
 knitr::include_graphics("img/shinyloadtestreport.png")
 ```
 
@@ -447,7 +447,7 @@ That's where `{dockerstats}` [@R-dockerstats] can come into play: this package i
 
 You can get the `{dockerstats}` package from GitHub with:
 
-```{r 12-step-by-step-secure-22, eval = FALSE}
+```{r 11-step-by-step-secure-23, eval = FALSE}
 remotes::install_github("ColinFay/dockerstats")
 ```
 
@@ -457,7 +457,7 @@ Or from npm via:
 npm install -g r-dockerstats
 ```
 
-```{r 12-step-by-step-secure-23 }
+```{r 11-step-by-step-secure-24 }
 library(dockerstats)
 ```
 
@@ -466,13 +466,13 @@ With these stats, we can monitor the load on the app when it is run in a docker 
 We will start by launching the container using a `system()` call: here, we are running the `{hexmake}` application, bundled in the `colinfay/hexmake` docker image, on port 2811. 
 We also make sure we give it a name with `--name`, so that we can call it in our `dockerstats()` call later on.
 
-```{r 12-step-by-step-secure-24, echo = FALSE, error = TRUE, eval = TRUE, cache=TRUE}
+```{r 11-step-by-step-secure-25, echo = FALSE, error = TRUE, eval = TRUE, cache=TRUE}
 try({system("docker rm hexmake")})
 system("docker run --name hexmake --rm -p 2811:80 colinfay/hexmake", wait = FALSE)
 Sys.sleep(5)
 ```
 
-```{r 12-step-by-step-secure-25, eval = FALSE}
+```{r 11-step-by-step-secure-26, eval = FALSE}
 # We are launching the docker container using R system() command. 
 # Here, we are running the container image called colinfay/hexmake. 
 # We are naming the container hexmake using the --name flag, 
@@ -489,7 +489,7 @@ system(
 
 Let's say now we want the stats for the hexmake container:
 
-```{r 12-step-by-step-secure-26, eval = TRUE, cache=TRUE}
+```{r 11-step-by-step-secure-27, eval = TRUE, cache=TRUE}
 # Showing the docker stats for hexmake
 dockerstats("hexmake")
 ```
@@ -499,7 +499,7 @@ But let's push it a little bit by mimicking a lot of connections.
 
 To do that, we can replay our `shinycannon` call, with at the same time using the `dockerstats_recurse()` function, that will recursively call `dockerstats()` on a regular interval. 
 
-```{bash 12-step-by-step-secure-27, eval = FALSE}
+```{bash 11-step-by-step-secure-28, eval = FALSE}
 # Replaying the recording
 shinycannon shinylogs/recording.log \ 
 # Specificying the host url and the number of "visitors"
@@ -511,7 +511,7 @@ http://localhost:2811 --workers 10 \
 Let's launch at the same time a `dockerstats_recurse()`
 For example, here, we will print, on each loop, the `MemUsage` of the container, then saving the data inside a `dockerstats.csv` file. 
 
-```{r 12-step-by-step-secure-28, eval = FALSE}
+```{r 11-step-by-step-secure-29, eval = FALSE}
 # Calling recursive the dockerstats function. 
 # The callback function takes a function, and define
 # what to do with the data.frame each time the 
@@ -531,14 +531,14 @@ Figure \@ref(fig:dockerstatscap) is what both these processes look side to side.
 
 (ref:dockerstatscap) `{dockerstats}` and `shinycannon` running side-by-side at the same time.
 
-```{r dockerstatscap, echo=FALSE, fig.cap='(ref:dockerstatscap)', out.width='100%'}
+```{r 11-step-by-step-secure-30, echo=FALSE, fig.cap='(ref:dockerstatscap)', out.width='100%'}
 knitr::include_graphics("img/hexmake-dockerstats.png")
 ```
 
 As you can see, as the number of connections grow, the memory usage grows. 
 And we now have a csv with the evolution of the `docker stats` records over time!
 
-```{r 12-step-by-step-secure-30 }
+```{r 11-step-by-step-secure-31 }
 # read_appended_csv() allows to read a csv that has been 
 # constructed with the append_csv() function
 docker_stats <- read_appended_csv(
@@ -546,11 +546,11 @@ docker_stats <- read_appended_csv(
 )
 ```
 
-```{r 12-step-by-step-secure-31 }
+```{r 11-step-by-step-secure-32 }
 dplyr::glimpse(docker_stats)
 ```
 
-```{r 12-step-by-step-secure-32, include=FALSE, eval = TRUE, cache=TRUE}
+```{r 11-step-by-step-secure-33, include=FALSE, eval = TRUE, cache=TRUE}
 try({system("docker kill hexmake")})
 ```
 
@@ -560,7 +560,7 @@ Let's record the computation of the `hexmake` container containing the same app 
 
 First, launch the container:
 
-```{r 12-step-by-step-secure-33 }
+```{r 11-step-by-step-secure-34 }
 # Launching the container a second time, but name it xmk2 and serve it on port 2708
 system(
   "docker run -p 2708:80 --rm --name xmk2 -d colinfay/hexmake", 
@@ -572,7 +572,7 @@ Sys.sleep(10) # Let the container launch
 
 Then, a `{crrry}` job:
 
-```{r 12-step-by-step-secure-34, eval = TRUE, cache=TRUE}
+```{r 11-step-by-step-secure-35, eval = TRUE, cache=TRUE}
 # See previous version of this code for a commented explanation 
 test <- crrry::CrrryOnPage$new(
   chrome_bin = pagedown::find_chrome(),
@@ -609,14 +609,14 @@ test$stop()
 
 And draw a small graph of this evolution: 
 
-```{r 12-step-by-step-secure-35, echo = FALSE}
+```{r 11-step-by-step-secure-36, echo = FALSE}
 results <- readRDS("dataset/results.RDS")
 ```
 
 (ref:dockerstatsusage) Plot of the `{dockerstats}` evolution
 
 
-```{r 12-step-by-step-secure-36, fig.cap="(ref:dockerstatsusage)", eval = TRUE, cache=TRUE}
+```{r 11-step-by-step-secure-37, fig.cap="(ref:dockerstatsusage)", eval = TRUE, cache=TRUE}
 library(dplyr, warn.conflicts = FALSE)
 # We are converting the MemUsage and record_time columns 
 # to a format that can be used in {ggplot2}
@@ -718,7 +718,7 @@ These kind of bugs are even harder to detect as `{geojsonsf}` was not a direct d
 
 (ref:geojsoncap) Breaking changes in `{geojsonsf}`, a dependency of a dependency of our `{shiny}` application.
 
-```{r geojsoncap, echo=FALSE, fig.cap='(ref:geojsoncap)', out.width='100%'}
+```{r 11-step-by-step-secure-38, echo=FALSE, fig.cap='(ref:geojsoncap)', out.width='100%'}
 knitr::include_graphics("img/geojson.png")
 ```
 
@@ -733,7 +733,7 @@ That means that you can have `{geojsonsf}` version `1.2.1` in one of your projec
 > Underlying the philosophy of renv is that any of your existing workflows should just work as they did befo. `r right_link("Introduction to renv", "https://rstudio.github.io/renv/articles/renv.html")`
 
 The first thing to do with `{renv}` is initiating it with the `init()` function. 
-```{r 12-step-by-step-secure-38, eval = FALSE}
+```{r 11-step-by-step-secure-39, eval = FALSE}
 # Loading and initiaing {renv}
 library(renv)
 init()
@@ -744,7 +744,7 @@ This function does several things:
 + Create/modify the `.Rprofile` file at the root of your project. 
 Here is an example of what this files may look like inside an empty project: 
 
-```{r 12-step-by-step-secure-39, comment="", echo = FALSE}
+```{r 11-step-by-step-secure-40, comment="", echo = FALSE}
 readLines("data-raw/.Rprofile") %>%
   glue::as_glue()
 ```
@@ -760,7 +760,7 @@ Bitbucket, and even local repositories.
 
 The `renv/` folder contains a series of files that store your settings and the necessary packages, using a structure that mimics a local repository.
 
-```{r 12-step-by-step-secure-40}
+```{r 11-step-by-step-secure-41 }
 # Displaying the strucuture of the folder
 fs::dir_tree("data-raw/renvinit/", recurse = 5)
 ```
@@ -775,21 +775,21 @@ This shim will search into the local cache to see if the package has already bee
 
 Now, we need to install a new package, for example `{attempt}` [@R-attempt]:
 
-```{r 12-step-by-step-secure-41, eval = FALSE}
+```{r 11-step-by-step-secure-42, eval = FALSE}
 # Installing attempt
 install.packages("attempt")
 ```
 
 We will now add a little call to this library now:
 
-```{r 12-step-by-step-secure-42 }
+```{r 11-step-by-step-secure-43 }
 # Create a fake script that launches {attempt}
 write("library(attempt)", "script.R")
 ```
 
 Once you want to update your `{renv}` `Lockfile`, call `snapshot()`
 
-```{r 12-step-by-step-secure-43, eval = FALSE}
+```{r 11-step-by-step-secure-44, eval = FALSE}
 # Snapshoting the current status of the environment
 renv::snapshot(confirm = FALSE)
 ```
@@ -797,7 +797,7 @@ renv::snapshot(confirm = FALSE)
 Note that if you are building an application as a package, use `renv::snapshot(type = "explicit")` (need version > `0.9.3-99`): this will only capture the dependencies listed in the `DESCRIPTION` file.
 If you don't specify this `type = "explicit"`, `{renv}` will go and look for all the package it can find in your file, and notably in your `.Rhistory`, meaning that if you one day used a function from `{dplyr}` but that your current package doesn't use it anymore, `{renv}` will include it. 
 
-```{r 12-step-by-step-secure-44, comment="", echo = FALSE}
+```{r 11-step-by-step-secure-45, comment="", echo = FALSE}
 readLines("data-raw/renv.lock") %>%
   glue::as_glue()
 ```
@@ -850,7 +850,7 @@ If you have a look at the `03_deploy.R` file in the `dev` folder, you will find 
 
 For example, to create a `Dockerfile` for a `{golem}` project, you can run, from the root of your package:
 
-```{r 12-step-by-step-secure-45, eval=FALSE}
+```{r 11-step-by-step-secure-46, eval=FALSE}
 golem::add_dockerfile()
 ```
 
@@ -858,7 +858,7 @@ Let's take some time to understand file, or how we could be building it from scr
 
 1. `FROM`
 
-```{r 12-step-by-step-secure-46, echo = FALSE, comment=""}
+```{r 11-step-by-step-secure-47, echo = FALSE, comment=""}
 readLines("data-raw/Dockerfile")[1] %>% 
   glue::as_glue()
 ```
@@ -867,7 +867,7 @@ This line defines what version of R to use for deploying your application.
 This `FROM` line is the one that sets an image to start from: you rarely (if ever) build a Docker image from nothing, but instead you use an existing image on top of which you build your own image.
 Here, we choose one of the [r-ver](https://hub.docker.com/r/rocker/r-ver/) docker images, based on the output of:
 
-```{r 12-step-by-step-secure-47, comment=""}
+```{r 11-step-by-step-secure-48, comment=""}
 R.Version()$version.string
 ```
 
@@ -894,7 +894,7 @@ RUN Rscript -e \
 
 As you can see, it matches the local version: 
 
-```{r 12-step-by-step-secure-48, comment=""}
+```{r 11-step-by-step-secure-49, comment=""}
 packageVersion("config")
 ```
 
@@ -903,7 +903,7 @@ packageVersion("config")
 This Docker entry takes a folder or a file, and copies it inside the image. 
 With `{golem}`, we are adding the current project, containing the app, to a folder called `/build_zone`. 
 
-```{r 12-step-by-step-secure-49, echo = FALSE, comment=""}
+```{r 11-step-by-step-secure-50, echo = FALSE, comment=""}
 readLines("data-raw/Dockerfile")[13] %>% 
   glue::as_glue()
 ```
@@ -912,7 +912,7 @@ readLines("data-raw/Dockerfile")[13] %>%
 
 This command defines which port of the container will be available from the outside of the container.
 
-```{r 12-step-by-step-secure-50, echo = FALSE, comment=""}
+```{r 11-step-by-step-secure-51, echo = FALSE, comment=""}
 readLines("data-raw/Dockerfile")[16] %>% 
   glue::as_glue()
 ```
@@ -922,7 +922,7 @@ readLines("data-raw/Dockerfile")[16] %>%
 This final command is the one that is launched when you run a container. 
 With a `{shiny}` app, this command is the one that launches the application.  
 
-```{r 12-step-by-step-secure-51, echo = FALSE, comment=""}
+```{r 11-step-by-step-secure-52, echo = FALSE, comment=""}
 readLines("data-raw/Dockerfile")[17] %>% 
   glue::as_glue()
 ```
@@ -932,7 +932,7 @@ readLines("data-raw/Dockerfile")[17] %>%
 If you want to do everything from the R command line, the `{dockerfiler}` [@R-dockerfiler] package is here for you! 
 This package allows you to generate a `Dockerfile` straight from R: 
 
-```{r 12-step-by-step-secure-52 }
+```{r 11-step-by-step-secure-53 }
 library(dockerfiler)
 # Creating a new Dockerfile object
 my_dock <- Dockerfile$new()
